Update to Java 25 LTS and modernize codebase
Dependency updates:
- Java 22 -> 25 (LTS)
- Micronaut Platform 4.4.2 -> 4.10.9
- Micronaut Core 4.4.3 -> 4.10.9
- JavaParser 3.26.0 -> 3.28.0 (Java 25 support)
- AssertJ 3.25.1 -> 3.27.7

Code modernization:
- Pattern matching for instanceof (JavaDocCheck)
- Paths.get() -> Path.of() (6 files)
- Removed Lombok @ExtensionMethod, use explicit static calls
- Replaced Guava Lists.newArrayList() with new ArrayList<>()
- Virtual threads for DaemonServer and FileWatcher
- computeIfAbsent() instead of getOrDefault() pattern
- Arrays.stream() -> List.of().stream()
- Removed stale comment, unnecessary parentheses
- Added @SuppressWarnings for unavoidable unchecked cast
- JavaParser language level JAVA_17 -> JAVA_25
- Enum constructor made package-private

All 91 tests pass.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>